--- a/final/index.html
+++ b/final/index.html
@@ -3,20 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Weather Visualization</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-      transition: background-color 0.5s ease;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
+  <title>Weather App</title>
 </head>
 <body>
-  <script src="script.js"></script>
+  <h1 id="temperature"></h1>
+  <h2 id="description"></h2>
+  <p id="location"></p>
 </body>
+
+<script src="script.js"></script>
 </html>
